# i18n

./: CMakeLists.txt  CMakePresets.json  README.md
docs/: readme.en.md  readme.ru.md
include/: i18n.hpp
src/: i18n.cpp
